[modified] : modified sass variables

--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -6,11 +6,12 @@ $bodyFont: 'Gabarito', sans-serif;
 
 // COLOR SCHEMES
 
-$mainBg: #C6D0BF;
+$mainBg: #ffffff;
 $subMainBg: #E1E3E3;
-$cardWhite: #FFFFFF;
-$accentColor: #5C8331;
-$bgAccent: #161e16;
+$primary: #53d86a;
+$secondary: #fd3d39;
+$tertiary: #fe9526;
+$accentColor: #398bfd;
 $fontColor: #0a0f0c;
 
 // SPACING
