[modified] : modified background color

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -9,5 +9,5 @@ html, body {
   font-family: $bodyFont;
   font-weight: 500;
   scroll-behavior: smooth;
-  background-color: $subMainBg;
+  background-color: $mainBg;
 }
