[style-improved] : improved styling

--- a/client/src/styles/form.scss
+++ b/client/src/styles/form.scss
@@ -8,11 +8,11 @@
 
     form {
         padding: 1rem;
-        outline: 2px solid $accentColor;
         border-radius: 20px;
         display: flex;
         flex-direction: column;
         gap: $spacingSmall;
+        color: white;
 
         .form-head{
             display: flex;
@@ -23,31 +23,6 @@
             .form-heading{
                 font-size: 20px;
                 font-weight: 600;
-            }
-        }
-
-        input {
-            background-color: whitesmoke;
-            outline: none;
-            border: none;
-            padding: $spacingSmall 1rem;
-            border-radius: 16px;
-            font-family: $bodyFont;
-            width: 240px;
-        }
-
-        button {
-            margin-top: $spacingSmall;
-            background-color: $accentColor;
-            outline: none;
-            border-radius: 16px;
-            border: none;
-            color: whitesmoke;
-            padding: 0.8rem;
-            font-size: 16px;
-            font-weight:600;
-            &:hover{
-                background-color: #006aff;
             }
         }
 
