--- a/client/src/pages/Room/Room.scss
+++ b/client/src/pages/Room/Room.scss
@@ -1,28 +1,30 @@
 @import '../../styles/variables';
 
 .room-container {
-    padding: 1rem;
     display: flex;
-    flex-direction: column;
-    gap: 1em;
+    padding: 1rem;
+    gap: 2rem;
 
     .room-heading {
         background-color: #0f0f0f;
         padding: 0.6rem 1rem;
         border-radius: 4px;
         font-size: 24px;
+        flex: 2;
         display: flex;
-        align-items: center;
         gap: 1rem;
 
         .room-icon{
-            width: 40px;
-            height: 40px;
+            width: 35px;
+            height: 35px;
         }
     }
 
     .room-body{
+        flex: 7;
         width: 100%;
-        padding: 0;
+        background-color: #1a1a1a;
+        padding: 0.6rem 1rem;
+        border-radius: 4px;
     }
 }
